--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="./favicon.png"> <!-- Use correct relative path -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="./src/style.css"> <!-- Correct relative path -->
     <title>Phaser React Template</title>
 </head>
 
 <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-
+    <script type="module" src="./src/main.tsx"></script> <!-- Use the built file -->
 </body>
 </html>
