changing from ts to js

--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Phaser React Template</title>
+    
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Styles -->
     <link rel="stylesheet" href="/style.css" />
-    <title>Phaser React Template</title>
   </head>
 
   <body>
+    <!-- React App Root -->
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Main JavaScript Entry -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
