Updated tiles to look green, capped resources, added plant functionality, added win clause, translated everything properly, completed gamplay loop, updated assets
Co-authored-by: firekicks <firekicks@users.noreply.github.com>
Co-authored-by: Jkumar13 <Jkumar13@users.noreply.github.com>
Co-authored-by: Rahamat Zaman <RahaZaman@users.noreply.github.com>
Co-authored-by: Yash Malegaonkar <ymalegao@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phaser React Template</title>
     
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.png" />
-
-    <!-- Fonts -->
+      <!-- Favicon -->
+      <link rel="icon" type="image/png" href="./sunflower-favicon/favicon-96x96.png" sizes="96x96" />
+      <link rel="icon" type="image/svg+xml" href="./sunflower-favicon/favicon.svg" />
+      <link rel="shortcut icon" href="./sunflower-favicon/favicon.ico" />
+      <link rel="apple-touch-icon" sizes="180x180" href="./sunflower-favicon/apple-touch-icon.png" />
+      <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+      <link rel="manifest" href="/sunflower-favicon/site.webmanifest"/>
+      
+      <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
@@ -18,7 +23,7 @@
     <link rel="stylesheet" href="/style.css" />
 
     <!-- Mobile installation / F3.c and F3.d-->
-    <link rel="manifest" href="/manifest.webmanifest" />
+
   </head>
 
   <body>
