Adding minor changes to application

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Phaser React Template</title>
+    <title>Garden Defense</title>
     
       <!-- Favicon -->
       <link rel="icon" type="image/png" href="./sunflower-favicon/favicon-96x96.png" sizes="96x96" />
@@ -21,8 +21,6 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="/style.css" />
-
-    <!-- Mobile installation / F3.c and F3.d-->
 
   </head>
 
